--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,14 @@ set(CPACK_PACKAGE_NAME "bitvis")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Bitcoin market visualizer")
 set(CPACK_PACKAGE_VENDOR "Benjamin Saunders")
 set(CPACK_PACKAGE_CONTACT "Benjamin Saunders <ralith@gmail.com>")
+set(CPACK_DEBIAN_PACKAGE_SECTION "Network")
 set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtk-3-0 (>= 3.0.1), libjson-glib-1.0-0 (>= 0.12.0)")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "libgtk-3-0 (>= 3.0.1), libjson-glib-1.0-0 (>= 0.12.0)")
 #set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README")
 #set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_VERSION_MAJOR "0")
 set(CPACK_PACKAGE_VERSION_MINOR "1")
-set(CPACK_PACKAGE_VERSION_PATCH "0")
+set(CPACK_PACKAGE_VERSION_PATCH "1")
 set(CPACK_GENERATOR "TGZ")
 include(CPack)
 
